# adk-cli

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
adk-cli/: .gitignore  README.md
adk-cli/adk_cli/: main.py
adk-cli/adk_cli/commands/: deploy.py  new.py
adk-cli/commands/: deploy.py  new.py
adk_cli/commands/: templates.py
commands/: templates.py
